* {% now 'utc', '%Y-%m-%d' %}
- Initial version of ={{ cookiecutter.project_name }}=
